--- a/package.json
+++ b/package.json
@@ -9,9 +9,21 @@
     "gulp-webpack": "^1.5.0"
   },
   "devDependencies": {
-    "angular": "^1.4.3",
-    "gulp": "^3.9.0",
-    "gulp-webpack": "^1.5.0"
+		"angular": "^1.4.3",
+		"angular-mocks": "^1.4.3",
+		"body-parser": "^1.13.2",
+		"chai": "^3.2.0",
+		"chai-http": "^1.0.0",
+		"express": "^4.13.1",
+		"gulp": "^3.9.0",
+		"gulp-webpack": "^1.5.0",
+		"jasmine-core": "^2.3.4",
+		"karma": "^0.13.8",
+		"karma-jasmine": "^0.3.6",
+		"karma-phantomjs-launcher": "^0.2.1",
+		"mocha": "^2.2.5",
+		"mongoose": "^4.0.8",
+		"phantomjs": "^1.9.17"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
